
2.1.18

	Segmentation fault when in verbose mode fixed - editfiles pointer.
	
	Error in parsing quotes and escaped quotes in functions.

	Bug in implementation of tidy scheduling during dependent classes fixed.

	BeginGroupIfLineMatch
	BeginGroupIfMatch
	BeginGroupIfLineContaining operations added

	Function ExecShellResult similar to ExecResult, but a shell is used,

	cfservd some additional memory reclamation during file updates, could cause memory leaks..
	
2.1.17

		This is a minor bugfix release

	
	WARNING	- the handling of function arguments has been changed. You are recommended to
	use normal C/Perl quoting of argument strings., e.g.

	  result = ( ExecResult("/bin/sh -c \"${pf_cc} -V | head -1 | cut -d\  -f3\"") )

	not

  	  result = ( ExecResult(/bin/sh -c "${pf_cc} -V | head -1 | cut -d\  -f3") )
	
	IsWildItemIn now has reflexive check - some confusion in the code about whether
	the needle or the haystack is the wildcard.
	
	Templating in editfiles. A new editfiles directive "ExpandVariables"
	adds an "m4" like function to cfengine -- allowing predefined variable strings
	to be expanded into text.
	
	Patch contributed: avor Ocelic <docelic@mail.inet.hr>
	
	Alerts patch - some alerts not installed, if classes not defined.
	
	Patch for missing variable expansion after function
	parameter rewrite in 2.1.16. Some functions were not fully ported.

	vicf eliminated from distribution	

	PrepModule environment fix

	Compilation error C++ mixed into cfetool fix

	Chdir to / when ascting as a daemon for cfservd, cfexecd etc

2.1.16
	Bugfix release

	Moved method parameter setting to fix a bug where parameters would
	be set too late to be used in the parser
	
	action=warn in copy required inform=true to work, fixed.
	
	Function arg expansion bug and improvement fix
	
	Include directive added to cfrun.hosts (Olivier Fauchon)
	
	MOUNT_RO name collision fix
	
	SEG fault fixed when signalling cfenvd

	SkipIdentify partial fix
	